od/2.1/ko/index.markdown
---
title: 열린 정의
layout: page
---

버전 2.1

열린 정의는 지식에 대한 "오픈[^open]"의 의미를 명확히 하고, 이를 통해 누구나 공유하고, 상호 운용성이 극대화되는 확고한 공통의 이해를 형성한다.

**요약:** *출처와 개방성 유지를 위한 수단을 최대 조건으로 누구나 자유롭게 접근, 사용, 변경, 공유할 수 있을 때, 지식은 열려있다.*

이 기본 의미는 [오픈 소스의 정의](https://ko.wikipedia.org/wiki/오픈_소스_정의)에서 사용된 소프트웨어에 대한 "오픈"의 정의와 일치하고, [자유 소프트웨어의 정의](https://ko.wikipedia.org/wiki/자유_소프트웨어의_정의)나 [자유로운 문화적 저작물의 정의](http://freedomdefined.org/Definition/Ko)에 나타난 "자유"와 같은 의미이다.

용어 **저작물**은 전달되는 지식의 항목 또는 일부를 나타내기 위해 사용된다.

용어 **라이선스**는 저작물이 제공되는 법적 조건을 의미한다.

용어 **퍼블릭 도메인**은 기본적으로 또는 모든 권리를 포기했기 때문에 저작권 및 이와 유사한 조건이 존재하지 않음을 나타낸다.

본 문서의 키 워드 "반드시(Must)", "절대 안 된다(Must Not)", "해야 한다(Should)", "할 수 있다(May)"는 [RFC2119](https://tools.ietf.org/html/rfc2119)에 기술된 대로 해석된다.

## 1. 열린 저작물

열린 **저작물**은 배포에 있어 *반드시* 다음 요구사항을 만족해야 한다.

### 1.1 오픈 라이선스 또는 열린 상태

**저작물**은 *반드시* **퍼블릭 도메인**에 존재하거나 오픈 **라이선스**(2절에서 정의됨)로 제공되어야 한다. 저작물에 수반된 어떤 추가적인 조건(이용 약관 또는 저작자가 보유한 특허 등)도 저작물의 퍼블릭 도메인 상태나 사용된 라이선스의 조항과 모순되면 *절대 안 된다*.

### 1.2 접근

**저작물**은 *반드시* 완전한 형태로 제공되어야 하고, 복제를 위한 합리적 수준의 일회성 비용 이상을 요구할 수 없으며, 비용 부담 없이 인터넷을 통해 내려받을 수 있도록 *해야 한다*. 라이선스를 따르기 위해 요구되는 추가적인 정보(저작자 표시 요구사항을 따르기 위한 기여자의 이름 등)는 *반드시* 저작물과 함께 제공되어야 한다.

### 1.3 기계 가독성

**저작물**은 *반드시* 컴퓨터로 쉽게 처리될 수 있고 저작물의 개별 요소에 쉽사리 접근 및 수정을 할 수 있는 형태로 제공되어야 한다.

### 1.4 오픈 포맷

**저작물**은 *반드시* 오픈 포맷으로 제공되어야 한다. 오픈 포맷은 금전적 또는 그 밖의 사용상 제약을 두지 않고 적어도 하나 이상의 자유 또는 오픈 소스 소프트웨어 도구로 완전히 처리될 수 있다.


## 2. 오픈 라이선스

**라이선스**는 다른 오픈 라이선스와 호환이 가능*해야 한다*.

**라이선스**는 각 조항이 다음 조건을 만족할 때 오픈이다.

### 2.1 요구되는 권한

**라이선스**는 *반드시* 다음에 대해 철회할 수 없는 권한을 부여(또는 허락)해야 한다.

#### 2.1.1 사용

**라이선스**는 *반드시* 라이선스가 적용된 저작물에 대해 자유로운 사용을 허락해야 한다.

#### 2.1.2 재배포

**라이선스**는 *반드시* 라이선스가 적용된 저작물에 대한 재배포를 허용해야 하며, 이는 저작물 자체 또는 다른 출처의 저작물들로 구성된 집합 일부로 판매되는 것을 포함한다.

#### 2.1.3 변경

**라이선스**는 *반드시* 라이선스가 적용된 저작물로부터 파생된 이차적 저작물의 창작을 허용해야 하고, 이차적 저작물이 원저작물과 같은 조건으로 배포될 수 있도록 허락해야 한다.

#### 2.1.4 분리

**라이선스**는 *반드시* 저작물 일부가 다른 부분 또는 해당 부분을 처음 배포한 어떤 집합으로부터 분리되어 자유롭게 사용, 배포, 변경될 수 있도록 허락해야 한다. 어떤 형태로든 저작물 일부를 원라이선스의 조건에 따라 받은 모든 사람은 원저작물에 대해 인가된 것과 같은 권리를 소유*해야 한다*.

#### 2.1.5 편집

**라이선스**는 *반드시* 라이선스가 적용된 저작물이 별개의 다른 저작물에 제약을 가하지 않으며 함께 배포될 수 있도록 허락해야 한다.

#### 2.1.6 차별 금지

**라이선스**는 어떤 사람이나 단체도 차별해서는 *절대 안 된다*.

#### 2.1.7 전파

저작물에 결부된 권리는 *반드시* 추가적인 법적 조건에 동의할 필요 없이 재배포된 모두에게 적용되어야 한다.

#### 2.1.8 모든 분야에 활용

**라이선스**는 *반드시* 목적에 상관없이 사용, 재배포, 변경, 편집을 허락해야 한다. **라이선스**는 누구에게도 특정 분야의 저작물 사용을 제한하면 *절대 안 된다*.

#### 2.1.9 무료

**라이선스**는 그 조건의 일부로 요금 체계, 사용료, 다른 보상이나 금전적 보수 등 무엇도 요구하면 *절대 안 된다*.

### 2.2 허용 가능 조건

**라이선스**는 허용 가능한 아래 조건을 제외하고 2.1절에서 요구되는 권한을 제약하거나, 모호하게 만들거나, 그 밖의 방법으로 축소할 수 없다.

#### 2.2.1 저작자 표시

**라이선스**는 대가성을 갖지 않는 한 저작물의 배포에 기여자, 저작권자, 후원자, 창작자 등 저작자를 표시하도록 요구*할 수 있다*.

#### 2.2.2 무결성

**라이선스**는 라이선스가 적용된 저작물의 변경된 판이 원저작물과 다른 이름 또는 판 번호를 갖거나 변경된 내용을 명시하도록 요구*할 수 있다*.

#### 2.2.3 동일 조건 변경 허락

**라이선스**는 저작물의 배포가 같거나 유사한 라이선스를 따르도록 요구*할 수 있다*.

#### 2.2.4 고지

**라이선스**는 저작권 고지 및 라이선스 표시의 보존을 요구*할 수 있다*.

#### 2.2.5 원시 코드

**라이선스**는 저작물을 배포하는 누구나 받는 사람이 쉽게 수정을 가할 수 있는 형식에 대한 접근을 제공하도록 요구*할 수 있다*.

#### 2.2.6 기술적 제한 금지

**라이선스**는 저작물의 배포가 허용된 권리의 행사에 제약을 가하게 될 모든 기술적 조치로부터 자유로울 것을 요구*할 수 있다*.

#### 2.2.7 불가침

**라이선스**는 변경자에게 라이선스에 의해 허락된 권리를 행사하는 데 필요한 추가적 공개 권한(예, 특허권)의 부여를 요구*할 수 있다*. 라이선스는 또한 허락된 권리의 행사에 있어 라이선스를 공격(예, 특허 소송)하지 않겠다는 동의를 조건으로 붙일 수 있다.

*translated by [James G. Kim](http://jayg.org/) and [Codenamu](http://codenamu.org/)*

[^open]: 국립국어원에서 출간된 국어순화용어자료집(1997)에 의하면 외래어 "Open"은 순화어 "열린"으로 번역해야 하나 본 문서의 문맥에 따라 적절치 않은 경우에는 "오픈"으로 표기한다. 단, "오픈"으로 표기된 경우에도 그 의미는 "열린"과 같다.

----
*열린 정의는 원래 오픈 소스의 정의와 이들을 포함한 데비안 우리의 약속으로부터 유래했다. 오픈 소스의 정의는 초기 데비안 자유 소프트웨어 지침으로부터 파생되었고, 데비안 우리의 약속은 브루스 페렌스(Bruce Perens)와 데비안 개발자들에 의해 만들어졌다. 브루스는 이후 같은 글을 오픈 소스의 정의를 만드는 데 사용했다. 열린 정의는 이 문서들의 많은 부분으로부터 유래하였으며, 그 문서들의 기본적인 원칙을 유지한다. 리차드 스톨만(Richard Stallman)은 우리가 지속하는 소프트웨어 자유의 이상을 추구한 최초의 사람이었다.*
